fix bug where part of the top of the page would be shown behind the nav bar

--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -2,6 +2,7 @@
     max-width: 100vw;
     max-height: 100vh;
     overflow: hidden;
+    margin-top: 10vh;
 }
 
 .hero {
